objects/Apttus__Agreement_Rule_Condition__c.object
<CustomObject>
    <description>Specifies a condition used to evaluate an agreement rule</description>
    <fields>
        <fullName>Apttus__Agreement_Rule__c</fullName>
        <description>The associated agreement rule</description>
        <inlineHelpText>The associated agreement rule</inlineHelpText>
        <label>Agreement Rule</label>
        <referenceTo>Apttus__Agreement_Rule__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>R00N50000001aduAEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Field__c</fullName>
        <description>The name of a field in the specified object.</description>
        <inlineHelpText>The name of a field in the specified object.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Join__c</fullName>
        <description>Logical operator for combining multiple field expressions in a query</description>
        <label>Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Number__c</fullName>
        <description>Condition sequence</description>
        <inlineHelpText>Condition sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Object__c</fullName>
        <description>Specifies the type of the object to query.</description>
        <inlineHelpText>The object type to query</inlineHelpText>
        <label>SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Operator__c</fullName>
        <description>Comparison operator for a field expression in a query</description>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>like</fullName>
                </value>
                <value>
                    <fullName>not like</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__RelationField__c</fullName>
        <description>Relation field that has a foreign key back to the parent</description>
        <inlineHelpText>Field that has a foreign key back to the parent</inlineHelpText>
        <label>Relation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Value__c</fullName>
        <description>A value used to compare with the value in field in a query</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agreement Rule Condition</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>